# NoEden

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Trinias.sln
src/: CMakeLists.txt  Core.cpp  Core.h  Entities.h  Entity.h  EntityAbstract.cpp  EntityAbstract.h  EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  IdGenerator.cpp  IdGenerator.h  Layer.cpp  Layer.h  MainMenu.cpp  MainMenu.h  Object.h  Renderer.cpp  Renderer.h  RoomGen.cpp  RoomGen.h  StaticId.cpp  StaticId.h  TextRenderer.cpp  TextRenderer.h  TextTester.cpp  TextTester.h  Trinias.vcxproj  Trinias.vcxproj.filters  Wall.h  Window.cpp  Window.h  attribute.hxx  color.hxx  components.hxx  core.cxx  core.hxx  (+44 more)
src/action/: action.cxx  action.hxx  action_creator.hxx  action_event.hxx  action_processor.hxx  action_queue.cxx  action_queue.hxx  action_result.hxx  action_type.hxx  move_action.cxx  move_action.hxx  null_action.hxx
src/actor/: action.hxx  action_queue.cxx  action_queue.hxx  actor.cxx  actor.hxx  archetype.hxx  catalog.hxx  display_info.hxx  entity_factory.cxx  entity_factory.hxx  move_action.cxx  move_action.hxx  player_controller.cxx  player_controller.hxx  skill.hxx  walk_action.cxx  walk_action.hxx
src/ai/: ai_closest_entity.cxx  ai_closest_entity.hxx  ai_condition.cxx  ai_condition.hxx  ai_context.cxx  ai_context.hxx  ai_node.cxx  ai_node.hxx  ai_priority_selector.cxx  ai_priority_selector.hxx  ai_script.cxx  ai_script.hxx  ai_selector.cxx  ai_selector.hxx  ai_sequence.cxx  ai_sequence.hxx  ai_system.cxx  ai_system.hxx  ai_walk.cxx  ai_walk.hxx  blackboard.cxx  blackboard.hxx  condition_resolver.cxx  condition_resolver.hxx  condition_type.cxx  condition_type.hxx  conditions.hxx  generic_ai_node.hxx
src/catalog/: behavior_parser.cxx  behavior_parser.hxx  catalog.cxx  catalog.hxx  catalog_reader.cxx  catalog_reader.hxx  entity_template_parser.cxx  entity_template_parser.hxx  material.hxx  material_parser.cxx  material_parser.hxx  material_reader.hxx
src/component/: behavior.cxx  behavior.hxx  component.cxx  component.hxx  generic_component.cxx  generic_component.hxx  life.cxx  life.hxx  render.cxx  render.hxx  skills.cxx  skills.hxx
src/components/: attribute.hxx  attribute_bearing.cxx  attribute_bearing.hxx  components.hxx  inventory.cxx  inventory.hxx  item.cxx  item.hxx
src/config/: config.hxx  config_event.hxx  config_manager.cxx  config_manager.hxx
src/controller/: controller.cxx  controller.hxx  controller_system.cxx  controller_system.hxx  unit_controller.cxx  unit_controller.hxx
src/engine/: engine.cxx  engine.hxx
src/entity/: action.hxx  archetype.hxx  catalog.cxx  catalog.hxx  display_info.hxx  entity.cxx  entity.hxx  entity_event.hxx  entity_factory.cxx  entity_factory.hxx  entity_manager.cxx  entity_manager.hxx  entity_reader.hxx  entity_template.hxx  entity_writer.hxx  fov.cxx  fov.hxx  move_action.cxx  move_action.hxx
src/env/: clock.cxx  clock.hxx  env_event.hxx  env_event_dispatcher.cxx  env_event_dispatcher.hxx  env_event_listener.hxx  env_event_system.cxx  env_event_system.hxx  env_interface.hxx  env_manager.cxx  env_manager.hxx  root_config.cxx  root_config.hxx  window.cxx  window.hxx
src/event/: event.hxx  event_listener.hxx  event_queue.hxx  gathering_event.hxx  gfx_event.hxx  inventory_event.hxx  platform_event.hxx  player_event.hxx  script_event.hxx  world_event.hxx
src/events/: engine_event_manager.hxx  event_manager.cxx  event_manager.hxx
src/framework/: concepts.hxx  engine_event_type.hxx  event.hxx  event_manager.cxx  event_manager.hxx  event_type.hxx  events.hxx  game_event_type.hxx  grid.hxx  macros.hxx  noise_generator.cxx  noise_generator.hxx  service_locator.hxx  thread_pool.cxx  thread_pool.hxx  topological_sort.hxx  usings.hxx
src/game/: config.hxx  engine_events.hxx  exit_manager.cxx  exit_manager.hxx  game.cxx  game.hxx  game_factory.cxx  game_factory.hxx  log.cxx  log.hxx  platform_event.hxx  window.cxx  window.hxx
src/gfx/: color.hxx  display.cxx  display.hxx  display_cell.hxx  display_info.hxx  fov.hxx  fps_provider.hxx  gfx_event.hxx  gfx_system.cxx  gfx_system.hxx  image.cxx  image.hxx  renderer.cxx  renderer.hxx  shader.cxx  shader.hxx  surface.cxx  surface.hxx  text.cxx  text.hxx  text_shader.cxx  text_shader.hxx  texture.cxx  texture.hxx  ui_renderer.cxx  ui_renderer.hxx  world_renderer.cxx  world_renderer.hxx
src/hud/: hud_system.cxx  hud_system.hxx  journal.cxx  journal.hxx  ui_lua_dependency_store.hxx  ui_node.cxx  ui_node.hxx  ui_node_proxy.hxx  ui_node_proxy_interface.hxx  ui_proxy.cxx  ui_proxy.hxx  ui_tree.hxx  ui_window.cxx  ui_window.hxx  ui_window_proxy.hxx
src/input/: input.cxx  input.hxx  input_event.hxx  input_interface.hxx  input_reader.hxx  input_state.cxx  input_state.hxx  input_system.cxx  input_system.hxx  key.hxx  keyboard.cxx  keyboard.hxx  keyboard_state.cxx  keyboard_state.hxx  mouse.cxx  mouse.hxx  mouse_button.hxx  mouse_state.cxx  mouse_state.hxx
src/instrumentation/: perf_timer.cxx  perf_timer.hxx  profiler.cxx  profiler.hxx
src/lang/: dictionary.cxx  dictionary.hxx  translation_loader.cxx  translation_loader.hxx  translator.cxx  translator.hxx
src/log/: log.cxx  log.hxx  memory_sink.cxx  memory_sink.hxx
src/main_menu/: main_menu.cxx  main_menu_controller.cxx  main_menu_controller.hxx  main_menu_realm.cxx
src/map/: vision_manager.cxx  vision_manager.hxx
src/math/: bresenham.hxx  rect.hxx  vec2.hxx
src/platform/: input_mapper.hxx  platform.cxx  platform.hxx  platform_event.hxx
src/player/: player_system.cxx  player_system.hxx
src/realm/: main_menu.cxx  main_menu.hxx  main_menu_controller.cxx  main_menu_realm.cxx  main_menu_realm.hxx  realm.cxx  realm.hxx  realm_event.hxx  realm_manager.cxx  realm_manager.hxx  realm_type.cxx  realm_type.hxx  realm_type_def.hxx
src/resource/: catalog_resource.hxx  plain_resource_repository.cxx  plain_resource_repository.hxx  resource.hxx  resource_index.cxx  resource_index.hxx  resource_loader.hxx  (+7 more)
test/: CMakeLists.txt  jaralyn.test.cxx  pch.hxx  test_events.hxx
(+388 files in other folders)
